--- a/config/ibmjdk.yml
+++ b/config/ibmjdk.yml
@@ -15,5 +15,5 @@
 
 # Configuration for JRE repository
 ---
-repository_root: "http://file.w3.bluemix.net/buildpack/jre/"
+repository_root: "http://ec2-50-17-51-6.compute-1.amazonaws.com:8080/a/fs/buildpack/jre/"
 version: 1.7.0_+
